2016-07-12  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.5 released.
	=========================


	Tag sources with `VER-2-6-5'.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect.pro: Updated.

2016-07-05  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.4 released.
	=========================


	Tag sources with `VER-2-6-4'.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect.pro: Updated.

2016-06-26  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Fix pixel box drawing.

	This commit circumvents a problem with Qt's `QPainter::drawImage'
	function; it seems that the alignment of the output becomes
	imprecise at high magnification values.

	* src/ftinspect.c (GlyphBitmap::paint): Manually draw pixel boxes
	with `fillRect'.

2016-05-29  Werner Lemberg  <wl@gnu.org>

	* src/ftbench.c (main): Add cast to remove compiler warning.

2016-05-29  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Mark pixel centers in the grid with a cross.

	* src/ftinspect.c (Grid::paint): Implement it.

2016-05-29  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Prepare zoom for drawing pixel center.

	This change makes the zoom use only even values larger than a given
	threshold; it also implements (kind of) logarithmic zooming.

	* src/ftinspect.h (QSpinBoxx): New class, derived from `QSpinBox'.
	(MainGUI): Updated.

	* src/ftinspect.cpp (MainGUI::createLayout): Updated.
	(QSpinBoxx::valueFromText, QSpinBoxx::stepBy): New methods.

2016-05-26  Werner Lemberg  <wl@gnu.org>

	[ftbench] Add support for third TrueType interpreter version.

	Option `-H' now takes an argument to select the CFF hinting engine,
	and new option `-I' selects the TT interpreter version.

	* src/ftbench.c (default_hinting_engine,
	default_interpreter_version): Replaced with...
	(tt_interpreter_versions, num_tt_interpreter_versions,
	dflt_tt_interpreter_version, cff_hinting_engines,
	num_cff_hinting_engines, dflt_cff_hinting_engine,
	cff_hinting_engine_names): ...  these new global variables.